Alteração de estilo e criação de novas páginas

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <div class="menu-superior">
             <menu>
-                <a href="">Locais</a>
+                <a href="locais.html">Locais</a>
                 <a href="">Mapa Interativo</a>
                 <a href="">Leis de Acessibilidade</a>
                 <a href="">Sobre Nós</a>
