--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <menu>
                 <a href="locais.html">Locais</a>
                 <a href="">Mapa Interativo</a>
-                <a href="">Leis de Acessibilidade</a>
+                <a href="leis.html">Leis de Acessibilidade</a>
                 <a href="">Sobre Nós</a>
                 <a href="">Para Você</a>
             </menu>
