Atualizações da página locais

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         
         <div class="menu-superior">
             <menu>
+                <a href="index.html">Home</a>
                 <a href="locais.html">Locais</a>
                 <a href="">Mapa Interativo</a>
                 <a href="leis.html">Leis de Acessibilidade</a>
