--- a/locais.html
+++ b/locais.html
@@ -10,26 +10,79 @@
             <div class="corpo">
                 <h1 class="titulo">Locais</h1>
                 <div class="menu-paginas">
-                    <a href="restaurantes.html" class="menu-locais">
+                    <a href="index.html" class="menu-locais">
+                        <img src="assets/Home.png" class="img-menu-locais" alt="">
+                        Home
+                    </a>
+                    <a href="#Restaurantes" class="menu-locais">
                         <img src="assets/restaurantes.png" class="img-menu-locais" alt="">
                         Restaurantes
                     </a>
                     <a href="lojas.html" class="menu-locais">
-                        <img src="assets/restaurantes.png" class="img-menu-locais" alt="">
+                        <img src="assets/lojas.png" class="img-menu-locais" alt="">
                         Lojas
                     </a>
                     <a href="supermercados.html" class="menu-locais">
-                        <img src="assets/restaurantes.png" class="img-menu-locais" alt="">
+                        <img src="assets/supermercado.png" class="img-menu-locais" alt="">
                         Supermercados
                     </a>
                     <a href="museus.html" class="menu-locais">
-                        <img src="assets/restaurantes.png" class="img-menu-locais" alt="">
+                        <img src="assets/museu.png" class="img-menu-locais" alt="">
                         Museus
                     </a>
                     <a href="pracas.html" class="menu-locais">
-                        <img src="assets/restaurantes.png" class="img-menu-locais" alt="">
+                        <img src="assets/praca.png" class="img-menu-locais" alt="">
                         Praças
                     </a>
+                </div>
+                <div class="todos-restaurantes" id="Restaurantes">
+                    <div class="restaurantes-linha">
+                        <div class="restaurante">
+                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <h4 class="titulo-detalhes-local">Praça da matriz</h4>
+                            <img src="assets/avaliacao-4.png" alt="">
+                            <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
+                        </div>
+
+                        <div class="restaurante">
+                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <h4 class="titulo-detalhes-local">Praça da matriz</h4>
+                            <img src="assets/avaliacao-4.png" alt="">
+                            <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
+                        </div>
+
+                        <div class="restaurante">
+                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <h4 class="titulo-detalhes-local">Praça da matriz</h4>
+                            <img src="assets/avaliacao-4.png" alt="">
+                            <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
+                        </div>
+
+                    </div>
+
+                    <div class="restaurantes-linha">
+                        <div class="restaurante">
+                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <h4 class="titulo-detalhes-local">Praça da matriz</h4>
+                            <img src="assets/avaliacao-4.png" alt="">
+                            <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
+                        </div>
+
+                        <div class="restaurante">
+                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <h4 class="titulo-detalhes-local">Praça da matriz</h4>
+                            <img src="assets/avaliacao-4.png" alt="">
+                            <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
+                        </div>
+
+                        <div class="restaurante">
+                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <h4 class="titulo-detalhes-local">Praça da matriz</h4>
+                            <img src="assets/avaliacao-4.png" alt="">
+                            <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
+                        </div>
+
+                    </div>
                 </div>
             </div>
             <img src="assets/detalhe.png" class="detalhe-lateral" alt="">
