Atualizações na Home

--- a/index.html
+++ b/index.html
@@ -29,6 +29,43 @@
                 Mossoró Acessivel
             </h1>
         </div>
+        <div class="elementostitulo">
+            <div class="elementotitulo">
+                <p class="subtitulohome">Notícias</p>
+            </div>
+            <div class="elementotitulo">
+                <p class="subtitulohome">Audiovisual</p>
+            </div>
+        </div>
+        <div class="elements">
+            <div class="noticias">
+                <a href="">
+                    <img src="assets/image 12.png" alt="Imagem de um ambiente com escadas" height="174">
+                </a>
+                <a href="">
+                    <img src="assets/image 13.png" alt="Um cadeirante subindo em algum lugar" height="174">
+                </a>
+                <a href="">
+                    <img src="assets/image 14.png" alt="Um cadeirante ajudando outro" height="174">
+                </a>
+            </div>
+            <div class="avisuais">
+                <a href="">
+                    <img src="assets/image 19.png" alt="Botão de Youtube" height="174">
+                </a>
+                <a href="">
+                    <img src="assets/image 21.png" alt="Botão de Spotify" height="174">
+                </a>
+            </div>
+        </div>
+        <div class="elementostitulo">
+            <div class="elementotitulo">
+                <p class="subtitulohome">Contatos</p>
+            </div>
+            <div class="elementotitulo">
+                <p class="subtitulohome">Sites Relacionados</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
