Atualizações na página Locais com botões funcionais

--- a/pracas.html
+++ b/pracas.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Locais</title>
+        <title>Locais - Pracas</title>
         <link rel="stylesheet" href="locais-style.css">
     </head>
 
@@ -14,7 +14,7 @@
                         <img src="assets/Home.png" class="img-menu-locais" alt="">
                         Home
                     </a>
-                    <a href="#Restaurantes" class="menu-locais">
+                    <a href="locais.html" class="menu-locais">
                         <img src="assets/restaurantes.png" class="img-menu-locais" alt="">
                         Restaurantes
                     </a>
@@ -30,29 +30,29 @@
                         <img src="assets/museu.png" class="img-menu-locais" alt="">
                         Museus
                     </a>
-                    <a href="pracas.html" class="menu-locais">
+                    <a href="#Pracas" class="menu-locais">
                         <img src="assets/praca.png" class="img-menu-locais" alt="">
                         Praças
                     </a>
                 </div>
-                <div class="todos-restaurantes" id="Restaurantes">
+                <div class="todos-restaurantes" id="Pracas">
                     <div class="restaurantes-linha">
                         <div class="restaurante">
-                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <img src="assets/Pracafoto.png" class="img-locais-detalhes">
                             <h4 class="titulo-detalhes-local">Central Gourmet</h4>
                             <img src="assets/avaliacao-4.png" alt="">
                             <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
                         </div>
 
                         <div class="restaurante">
-                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <img src="assets/Pracafoto.png" class="img-locais-detalhes">
                             <h4 class="titulo-detalhes-local">Cantinho do Sabor</h4>
                             <img src="assets/avaliacao-4.png" alt="">
                             <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
                         </div>
 
                         <div class="restaurante">
-                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <img src="assets/Pracafoto.png" class="img-locais-detalhes">
                             <h4 class="titulo-detalhes-local">Bom Paladar</h4>
                             <img src="assets/avaliacao-4.png" alt="">
                             <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
@@ -62,21 +62,21 @@
 
                     <div class="restaurantes-linha">
                         <div class="restaurante">
-                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <img src="assets/Pracafoto.png" class="img-locais-detalhes">
                             <h4 class="titulo-detalhes-local">Tempero Gourmet</h4>
                             <img src="assets/avaliacao-4.png" alt="">
                             <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
                         </div>
 
                         <div class="restaurante">
-                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <img src="assets/Pracafoto.png" class="img-locais-detalhes">
                             <h4 class="titulo-detalhes-local">Sabor e Companhia</h4>
                             <img src="assets/avaliacao-4.png" alt="">
                             <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
                         </div>
 
                         <div class="restaurante">
-                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <img src="assets/Pracafoto.png" class="img-locais-detalhes">
                             <h4 class="titulo-detalhes-local">Delicias da Casa</h4>
                             <img src="assets/avaliacao-4.png" alt="">
                             <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
