--- a/supermercados.html
+++ b/supermercados.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Locais</title>
+        <title>Locais - Supermercados</title>
         <link rel="stylesheet" href="locais-style.css">
     </head>
 
@@ -14,7 +14,7 @@
                         <img src="assets/Home.png" class="img-menu-locais" alt="">
                         Home
                     </a>
-                    <a href="#Restaurantes" class="menu-locais">
+                    <a href="locais.html" class="menu-locais">
                         <img src="assets/restaurantes.png" class="img-menu-locais" alt="">
                         Restaurantes
                     </a>
@@ -22,7 +22,7 @@
                         <img src="assets/lojas.png" class="img-menu-locais" alt="">
                         Lojas
                     </a>
-                    <a href="supermercados.html" class="menu-locais">
+                    <a href="#Supermercados" class="menu-locais">
                         <img src="assets/supermercado.png" class="img-menu-locais" alt="">
                         Supermercados
                     </a>
@@ -35,24 +35,24 @@
                         Praças
                     </a>
                 </div>
-                <div class="todos-restaurantes" id="Restaurantes">
+                <div class="todos-restaurantes" id="Supermercados">
                     <div class="restaurantes-linha">
                         <div class="restaurante">
-                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <img src="assets/Supermercadoimagem.png" class="img-locais-detalhes">
                             <h4 class="titulo-detalhes-local">Central Gourmet</h4>
                             <img src="assets/avaliacao-4.png" alt="">
                             <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
                         </div>
 
                         <div class="restaurante">
-                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <img src="assets/Supermercadoimagem.png" class="img-locais-detalhes">
                             <h4 class="titulo-detalhes-local">Cantinho do Sabor</h4>
                             <img src="assets/avaliacao-4.png" alt="">
                             <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
                         </div>
 
                         <div class="restaurante">
-                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <img src="assets/Supermercadoimagem.png" class="img-locais-detalhes">
                             <h4 class="titulo-detalhes-local">Bom Paladar</h4>
                             <img src="assets/avaliacao-4.png" alt="">
                             <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
@@ -62,21 +62,21 @@
 
                     <div class="restaurantes-linha">
                         <div class="restaurante">
-                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <img src="assets/Supermercadoimagem.png" class="img-locais-detalhes">
                             <h4 class="titulo-detalhes-local">Tempero Gourmet</h4>
                             <img src="assets/avaliacao-4.png" alt="">
                             <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
                         </div>
 
                         <div class="restaurante">
-                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <img src="assets/Supermercadoimagem.png" class="img-locais-detalhes">
                             <h4 class="titulo-detalhes-local">Sabor e Companhia</h4>
                             <img src="assets/avaliacao-4.png" alt="">
                             <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
                         </div>
 
                         <div class="restaurante">
-                            <img src="assets/restaurante.png" class="img-locais-detalhes">
+                            <img src="assets/Supermercadoimagem.png" class="img-locais-detalhes">
                             <h4 class="titulo-detalhes-local">Delicias da Casa</h4>
                             <img src="assets/avaliacao-4.png" alt="">
                             <a href="restaurante.html" class="botao-detalhes">Destalhes</a>
