--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -9,7 +9,9 @@
     <h1>
         Sobre Nós
     </h1>
-    <p> Equipe </p>
+    <h3> Equipe </h3>
     <p> Syang Aires </p>
+    <p> Crisleyciano Samuel </p>
 </body>
+
 </html>
