updante sobre_nos

--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -13,6 +13,7 @@
     <p> Syang Aires </p>
     <p> Crisleyciano Samuel </p>
     <p> Daniel Tainan </p>
+    <p> Alam vinicius </p>
 </body>
 
 </html>
