--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -14,6 +14,7 @@
     <p> Crisleyciano Samuel </p>
     <p> Daniel Tainan </p>
     <p> Alam vinicius </p>
+    <p> Victor Manoel </p>
 </body>
 
 </html>
