--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -15,6 +15,7 @@
     <p> Daniel Tainan </p>
     <p> Alam vinicius </p>
     <p> Victor Manoel </p>
+    <p> RIan Lima dos Santos</p>
 </body>
 
 </html>
