--- a/Restaurantes.html
+++ b/Restaurantes.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Locais</title>
+        <title>Restaurantes</title>
         <link rel="stylesheet" href="locais-style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
@@ -17,7 +17,7 @@
                         Home </div>
                     
                     </a>
-                    <a href="Restaurantes.html" class="menu-locais">
+                    <a href="#Restaurantes" class="menu-locais">
                         <img src="assets/restaurantes.png" class="img-menu-locais" alt="">
                         Restaurantes
                     </a>
@@ -177,7 +177,7 @@
                     <!-- Restaurante 6 -->
                     <div class="restaurante">
                       <img src="assets/restaurante.png" class="img-locais-detalhes">
-                      <h4 class="titulo-detalhes-local">Praça da matriz</h4>
+                      <h4 class="titulo-detalhes-local">Deusa Gourmet</h4>
                       <a href="pgmolde6.html" class="botao-detalhes">Detalhes</a>
                   
                       <div class="rating-box">
