--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -9,13 +9,12 @@
     <h1>
         Sobre Nós
     </h1>
-    <h3> Equipe </h3>
+    <p> Equipe </p>
     <p> Syang Aires </p>
-    <p> Crisleyciano Samuel </p>
+    <p> Crisleyciano Samuel</p>
     <p> Daniel Tainan </p>
     <p> Alam vinicius </p>
     <p> Victor Manoel </p>
-    <p> RIan Lima dos Santos</p>
+    <p> RIan Lima dos Santos</p></p>
 </body>
-
 </html>
