Adicionando página molde no detalhe 6 com html e css

--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -11,5 +11,10 @@
     </h1>
     <p> Equipe </p>
     <p> Syang Aires </p>
+    <p> Crisleyciano Samuel</p>
+    <p> Daniel Tainan </p>
+    <p> Alam vinicius </p>
+    <p> Victor Manoel </p>
+    <p> RIan Lima dos Santos</p></p>
 </body>
 </html>
