--- a/locais.html
+++ b/locais.html
@@ -176,8 +176,8 @@
                   
                     <!-- Restaurante 6 -->
                     <div class="restaurante">
-                      <img src="assets/restaurante.png" class="img-locais-detalhes">
-                      <h4 class="titulo-detalhes-local">Praça da matriz</h4>
+                      <img src="assets/deusagourmet.jpg" class="img-locais-detalhes">
+                      <h4 class="titulo-detalhes-local">Deusa Gourmet</h4>
                       <a href="pgmolde6.html" class="botao-detalhes">Detalhes</a>
                   
                       <div class="rating-box">
