--- a/pgmolde.html
+++ b/pgmolde.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Deusa Gourmet</title>
+      <title>Buscape Budd</title>
       <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="molderest-style.css">
     </head>
