--- a/Restaurantes.html
+++ b/Restaurantes.html
@@ -41,9 +41,9 @@
                 <div class="todos-restaurantes" id="Restaurantes">
                     <div class="restaurantes-linha">
                   
-                      <!-- Restaurante 1 -->
+                     <!-- Restaurante 1 -->
                       <div class="restaurante">
-                        <img src="assets/restaurante.png" class="img-locais-detalhes">
+                        <img src="assets/buscape-budd.jpg" class="img-locais-detalhes">
                         <h4 class="titulo-detalhes-local">Praça da matriz</h4>
                         <a href="pgmolde.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
