--- a/Restaurantes.html
+++ b/Restaurantes.html
@@ -44,7 +44,7 @@
                      <!-- Restaurante 1 -->
                       <div class="restaurante">
                         <img src="assets/buscape-budd.jpg" class="img-locais-detalhes">
-                        <h4 class="titulo-detalhes-local">Praça da matriz</h4>
+                        <h4 class="titulo-detalhes-local">Buscape Budd</h4>
                         <a href="pgmolde.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating1-5" name="rating1" hidden>
