--- a/Restaurantes.html
+++ b/Restaurantes.html
@@ -176,7 +176,7 @@
                   
                     <!-- Restaurante 6 -->
                     <div class="restaurante">
-                      <img src="deusagourmet.jpg" class="img-locais-detalhes">
+                      <img src="assets/deusagourmet.jpg" class="img-locais-detalhes">
                       <h4 class="titulo-detalhes-local">Deusa Gourmet</h4>
                       <a href="pgmolde6.html" class="botao-detalhes">Detalhes</a>
                   
