--- a/locais.html
+++ b/locais.html
@@ -43,7 +43,7 @@
                   
                       <!-- Restaurante 1 -->
                       <div class="restaurante">
-                        <img src="assets/buscape-budd.jpg" class="img-locais-detalhes">
+                        <img src="assets/restaurante.png" class="img-locais-detalhes">
                         <h4 class="titulo-detalhes-local">Praça da matriz</h4>
                         <a href="pgmolde.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
@@ -70,7 +70,7 @@
                       <div class="restaurante">
                         <img src="assets/restaurante.png" class="img-locais-detalhes">
                         <h4 class="titulo-detalhes-local">Praça da matriz</h4>
-                        <a href="pgmolde2.html" class="botao-detalhes">Detalhes</a>
+                        <a href="pgmolde.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating2-5" name="rating2" hidden>
                           <label for="rating2-5" class="fa-solid fa-star"></label>
@@ -93,9 +93,9 @@
                   
                       <!-- Restaurante 3 -->
                       <div class="restaurante">
-                        <img src="assets/restaurante.png" class="img-locais-detalhes">
-                        <h4 class="titulo-detalhes-local">Praça da matriz</h4>
-                        <a href="pgmolde3.htmlg" class="botao-detalhes">Detalhes</a>
+                        <img src="assets/fornoalenha.png" class="img-locais-detalhes">
+                        <h4 class="titulo-detalhes-local">Pizzaria Forno a Lenha</h4>
+                        <a href="pgmolde3.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating3-5" name="rating3" hidden>
                           <label for="rating3-5" class="fa-solid fa-star"></label>
