Atualiza página locais e reorganiza imagem tchegourmet

--- a/locais.html
+++ b/locais.html
@@ -150,8 +150,8 @@
                   
                     <!-- Restaurante 5 -->
                     <div class="restaurante">
-                      <img src="assets/restaurante.png" class="img-locais-detalhes">
-                      <h4 class="titulo-detalhes-local">Praça da matriz</h4>
+                      <img src="assets/tchegourmet.jpg" class="img-locais-detalhes">
+                      <h4 class="titulo-detalhes-local">Tchê Gourmet</h4>
                       <a href="pgmolde5.html" class="botao-detalhes">Detalhes</a>
                   
                       <div class="rating-box">
