--- a/Restaurantes.html
+++ b/Restaurantes.html
@@ -95,7 +95,7 @@
                       <div class="restaurante">
                         <img src="assets/fornoalenha.png" class="img-locais-detalhes">
                         <h4 class="titulo-detalhes-local">Pizzaria Forno a Lenha</h4>
-                        <a href="pgmolde3.html" class="botao-detalhes">Detalhes</a>
+                        <a href="restaurantes/pgmolde3.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating3-5" name="rating3" hidden>
                           <label for="rating3-5" class="fa-solid fa-star"></label>
