--- a/restaurantes/pgmolde3.html
+++ b/restaurantes/pgmolde3.html
@@ -18,7 +18,7 @@
     <body>
       <div class="container">
         <h2 class="titulo">Forno a Lenha</h2>
-        <img src="assets/fornoalenha.png" alt="Foto de vista ampla do estabelecimento" class="imagem-local">
+        <img src="./assets/fornoalenha.png" alt="Foto de vista ampla do estabelecimento" class="imagem-local">
         
         <div class="tags">
           <span class="tag">Rampas de Acesso</span>
