--- a/locais.html
+++ b/locais.html
@@ -124,8 +124,8 @@
 
                     <!-- Restaurante 4 -->
                     <div class="restaurante">
-                      <img src="assets/restaurante.png" class="img-locais-detalhes">
-                      <h4 class="titulo-detalhes-local">Praça da matriz</h4>
+                      <img src="assets/logo-onsen-branco.jpg.jpg" class="img-locais-detalhes">
+                      <h4 class="titulo-detalhes-local">Restaurante Onsen</h4>
                       <a href="pgmolde4.html" class="botao-detalhes">Detalhes</a>
                   
                       <div class="rating-box">
