--- a/supermercados.html
+++ b/supermercados.html
@@ -150,9 +150,9 @@
                   
                     <!-- Restaurante 5 -->
                     <div class="restaurante">
-                      <img src="assets/restaurante.png" class="img-locais-detalhes">
+                      <img src="./assets/loja-centro.jpg" class="img-locais-detalhes">
                       <h4 class="titulo-detalhes-local">Praça da matriz</h4>
-                      <a href="pgmolde5.html" class="botao-detalhes">Detalhes</a>
+                      <a href="pgmoldemer5.html" class="botao-detalhes">Detalhes</a>
                   
                       <div class="rating-box">
                         <input type="radio" id="rating5-5" name="rating5" hidden>
