--- a/restaurantes/pgmolde3.html
+++ b/restaurantes/pgmolde3.html
@@ -13,12 +13,12 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Forno a Lenha</title>
       <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="./molderest-style.css">
+      <link rel="stylesheet" href="../molderest-style.css">
     </head>
     <body>
       <div class="container">
         <h2 class="titulo">Forno a Lenha</h2>
-        <img src="./assets/fornoalenha.png" alt="Foto de vista ampla do estabelecimento" class="imagem-local">
+        <img src="../assets/fornoalenha.png" alt="Foto de vista ampla do estabelecimento" class="imagem-local">
         
         <div class="tags">
           <span class="tag">Rampas de Acesso</span>
