--- a/locais.html
+++ b/locais.html
@@ -45,7 +45,7 @@
                       <div class="restaurante">
                         <img src="assets/buscape-budd.jpg" class="img-locais-detalhes">
                         <h4 class="titulo-detalhes-local">Buscape Budd</h4>
-                        <a href="pgmolde.html" class="botao-detalhes">Detalhes</a>
+                        <a href="restaurantes/pgmolde.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating1-5" name="rating1" hidden>
                           <label for="rating1-5" class="fa-solid fa-star"></label>
