--- a/lojas/loja1.html
+++ b/lojas/loja1.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Buscape Budd</title>
+  <title>Mossoro Acessivel - Adidas</title>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="moldelojas-style.css">
 </head>
 <body>
   <div class="container">
-    <h2 class="titulo">Riachuelo</h2>
-    <img src="./riachuelo.jpg" alt="Fachada da loja Riachuelo R. Cel. Gurgel, 220 - Centro, Mossoró - RN" class="imagem-local">
+    <h2 class="titulo">Adidas</h2>
+    <img src="adidas.png" alt="Fachada da loja Adidas Av. João da Escóssia, 1515 Loja  - Nova Betânia, Mossoró - RN, CEP 59607-330" class="imagem-local">
     
     <div class="tags">
       <span class="tag">Rampas de Acesso</span>
@@ -20,7 +20,7 @@
     </div>
 
     <p class="descricao">
-    A Riachuelo se propõe a facilitar o acesso à moda, levando-a ao consumidor com agilidade e qualidade, por um valor justo. Para tanto, pesquisa, desenvolve e distribui as novidades das passarelas e das ruas na velocidade que o mundo pede e que os clientes merecem. Além disso, busca trazer produtos de qualidade e com personalidade, para ser referência no varejo de moda feminina, masculina e infantil.
+    Loja de varejo com roupas, calçados e acessórios esportivos da marca. Av. João da Escóssia, 1515 Loja  - Nova Betânia, Mossoró - RN, CEP 59607-330
     </p>
   </div>
 </body>
