Adicionada Loja3 Finna Modas

--- a/lojas/loja3.html
+++ b/lojas/loja3.html
@@ -4,23 +4,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Buscape Budd</title>
+  <title>Finna Modas</title>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="moldelojas-style.css">
 </head>
 <body>
   <div class="container">
-    <h2 class="titulo">Riachuelo</h2>
-    <img src="./riachuelo.jpg" alt="Fachada da loja Riachuelo R. Cel. Gurgel, 220 - Centro, Mossoró - RN" class="imagem-local">
+    <h2 class="titulo">Finna Modas</h2>
+    <img src="./fina.png" alt="Fachada da loja Finna Modas, Mossoró - RN" class="imagem-local">
     
     <div class="tags">
       <span class="tag">Rampas de Acesso</span>
-      <span class="tag">Banheiro Adaptado</span>
+      <span class="tag">Portas Largas</span>
       <span class="tag">Estacionamento Acessível</span>
     </div>
 
     <p class="descricao">
-    A Riachuelo se propõe a facilitar o acesso à moda, levando-a ao consumidor com agilidade e qualidade, por um valor justo. Para tanto, pesquisa, desenvolve e distribui as novidades das passarelas e das ruas na velocidade que o mundo pede e que os clientes merecem. Além disso, busca trazer produtos de qualidade e com personalidade, para ser referência no varejo de moda feminina, masculina e infantil.
+    A Finna Modas se propõe a facilitar o acesso à moda, levando-a ao consumidor com agilidade e qualidade, por um valor justo. Para tanto, pesquisa, desenvolve e distribui as novidades das passarelas e das ruas na velocidade que o mundo pede e que os clientes merecem. Além disso, busca trazer produtos de qualidade e com personalidade, para ser referência no varejo de moda feminina.
     </p>
   </div>
 </body>
