--- a/lojas.html
+++ b/lojas.html
@@ -93,8 +93,8 @@
                   
                       <!-- Restaurante 3 -->
                       <div class="restaurante">
-                        <img src="assets/restaurante.png" class="img-locais-detalhes">
-                        <h4 class="titulo-detalhes-local">Praça da matriz</h4>
+                        <img src="lojas/fina.png" class="img-locais-detalhes">
+                        <h4 class="titulo-detalhes-local">Finna Modas</h4>
                         <a href="pgmolde.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating3-5" name="rating3" hidden>
