--- a/lojas.html
+++ b/lojas.html
@@ -95,7 +95,7 @@
                       <div class="restaurante">
                         <img src="lojas/fina.png" class="img-locais-detalhes">
                         <h4 class="titulo-detalhes-local">Finna Modas</h4>
-                        <a href="pgmolde.html" class="botao-detalhes">Detalhes</a>
+                        <a href="./lojas/loja3.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating3-5" name="rating3" hidden>
                           <label for="rating3-5" class="fa-solid fa-star"></label>
