--- a/restaurantes/pgmolde2.html
+++ b/restaurantes/pgmolde2.html
@@ -5,12 +5,12 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>germanos restaurante</title>
       <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="molderest-style.css">
+      <link rel="stylesheet" href="../molderest-style.css">
     </head>
     <body>
       <div class="container">
         <h2 class="titulo">germanos restaurante</h2>
-        <img src="assets/images.png" alt="Deusa Gourmet" class="imagem-local">
+        <img src="../assets/images.png" alt="Deusa Gourmet" class="imagem-local">
         
         <div class="tags">
           <span class="tag">Rampas de Acesso</span>
