--- a/locais.html
+++ b/locais.html
@@ -68,9 +68,9 @@
                   
                       <!-- Restaurante 2 -->
                       <div class="restaurante">
-                        <img src="assets/restaurante.png" class="img-locais-detalhes">
+                        <img src="assets/images.png" class="img-locais-detalhes">
                         <h4 class="titulo-detalhes-local">Praça da matriz</h4>
-                        <a href="restaurantes/pgmolde2.html" class="botao-detalhes">Detalhes</a>
+                        <a href="pgmolde2.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating2-5" name="rating2" hidden>
                           <label for="rating2-5" class="fa-solid fa-star"></label>
