--- a/supermercados/super2.html
+++ b/supermercados/super2.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Buscape Budd</title>
+  <title>Mossoró Acessivel - Hiper Queiroz Nova Betania</title>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="moldesuper-style.css">
 </head>
 <body>
   <div class="container">
-    <h2 class="titulo">Rebouças</h2>
-    <img src="./rebouças.jpg" alt="Fachada do supermercado Rebouças na Av. Alberto Maranhão" class="imagem-local">
+    <h2 class="titulo">Hiper Queiroz Nova Betania</h2>
+    <img src="hiper-queiroz-nova-betania.png" alt="Fachada do supermercado Hiper Quiroz Nova Betania" class="imagem-local">
     
     <div class="tags">
       <span class="tag">Rampas de Acesso</span>
@@ -20,7 +20,7 @@
     </div>
 
     <p class="descricao">
-      O Rebouças Supermercados é uma empresa genuinamente potiguar de grande potencial no mercado Norte Rio Grandense. Objetivando promover sempre o melhor, o Rebouças Supermercados, estabelece constantes parcerias para propiciar excelentes condições de compra e um menor preço aos seus consumidores.
+      Rua Carina de Almeida Costa, 158 - Nova Betânia, Mossoró - RN, 59612-030
     </p>
   </div>
 </body>
