--- a/supermercados.html
+++ b/supermercados.html
@@ -68,8 +68,8 @@
                   
                       <!-- Supermercado 2 -->
                       <div class="restaurante">
-                        <img src="assets/restaurante.png" class="img-locais-detalhes">
-                        <h4 class="titulo-detalhes-local">Supermercado 2</h4>
+                        <img src="../MossoroAcessivel/supermercados/hiper-queiroz-nova-betania.png" class="img-locais-detalhes">
+                        <h4 class="titulo-detalhes-local">Hiper Queiroz NB</h4>
                         <a href="supermercados/super2.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating2-5" name="rating2" hidden>
