Criação da loja 5

--- a/lojas/loja5.html
+++ b/lojas/loja5.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <h2 class="titulo">Americanas</h2>
-    <img src="./americanas.png" alt="logo da loja americanas AV. João da Escócia, 1515  Mossoró - RN" class="imagem-local">
+    <img src="americanas.png" alt="logo da loja americanas AV. João da Escócia, 1515  Mossoró - RN" class="imagem-local">
     
     <div class="tags">
       <span class="tag">Rampas de Acesso</span>
