--- a/supermercados/super2.html
+++ b/supermercados/super2.html
@@ -20,7 +20,7 @@
     </div>
 
     <p class="descricao">
-      Rua Carina de Almeida Costa, 158 - Nova Betânia, Mossoró - RN, 59612-030
+      Rua Carina de Almeida Costa, 158 - Nova Betânia, Mossoró - RN, CEP 59612-030
     </p>
   </div>
 </body>
