--- a/supermercados/super2.html
+++ b/supermercados/super2.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <h2 class="titulo">Hiper Queiroz Nova Betania</h2>
-    <img src="hiper-queiroz-nova-betania.png" alt="Fachada do supermercado Hiper Quiroz Nova Betania" class="imagem-local">
+    <img src="hiper-queiroz-nova-betania.png" alt="Fachada do supermercado Hiper Quiroz Nova Betania Rua Carina de Almeida Costa, 158 - Nova Betânia" class="imagem-local">
     
     <div class="tags">
       <span class="tag">Rampas de Acesso</span>
