--- a/supermercados.html
+++ b/supermercados.html
@@ -73,7 +73,7 @@
                       <!-- Supermercado 2 -->
                       <div class="restaurante">
                         <img src="../MossoroAcessivel/supermercados/hiper-queiroz-nova-betania.png" class="img-locais-detalhes">
-                        <h4 class="titulo-detalhes-local">Hiper Queiroz N.B.</h4>
+                        <h4 class="titulo-detalhes-local">Hiper Queiroz NB</h4>
                         <a href="supermercados/super2.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating2-5" name="rating2" hidden>
