--- a/pgmolde4.html
+++ b/pgmolde4.html
@@ -24,7 +24,7 @@
           <span class="tag">Rampas de Acesso</span>
           <span class="tag">Banheiro Adaptado</span>
           <span class="tag">Estacionamento Acessível</span>
-          <span class="tag">Assentos adptaveis</span>
+          <span class="tag">Assentos adptáveis</span>
         </div>
     
         <p class="descricao">
