--- a/lojas/loja4.html
+++ b/lojas/loja4.html
@@ -4,23 +4,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Buscape Budd</title>
+  <title>Magazine Luiza</title>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="moldelojas-style.css">
+  <link rel="stylesheet" href="../molderest-style.css">
 </head>
 <body>
   <div class="container">
-    <h2 class="titulo">Riachuelo</h2>
-    <img src="./riachuelo.jpg" alt="Fachada da loja Riachuelo R. Cel. Gurgel, 220 - Centro, Mossoró - RN" class="imagem-local">
-    
+    <h2 class="titulo">Magazine Luiza</h2>
+    <img src="../assets/magazine-luiza.jpg" alt="Fachada da Magazine Luiza Av. João da Escóssia,1515- Partage Shopping Mossoró">
     <div class="tags">
       <span class="tag">Rampas de Acesso</span>
       <span class="tag">Banheiro Adaptado</span>
       <span class="tag">Estacionamento Acessível</span>
+      <span class="tag">assento adptáveis</span>
     </div>
 
     <p class="descricao">
-    A Riachuelo se propõe a facilitar o acesso à moda, levando-a ao consumidor com agilidade e qualidade, por um valor justo. Para tanto, pesquisa, desenvolve e distribui as novidades das passarelas e das ruas na velocidade que o mundo pede e que os clientes merecem. Além disso, busca trazer produtos de qualidade e com personalidade, para ser referência no varejo de moda feminina, masculina e infantil.
+      Magazine Luiza é um varejista brasileiro multicanal, que se tornou uma gigante do e-commerce e dos marketplaces. Sua estratégia foca em uma experiência omnichannel integrada, combinando mais de mil lojas físicas com uma forte operação digital
     </p>
   </div>
 </body>
