--- a/museus.html
+++ b/museus.html
@@ -41,11 +41,11 @@
                 <div class="todos-restaurantes" id="Restaurantes">
                     <div class="restaurantes-linha">
                   
-                      <!-- Restaurante 1 -->
+                      <!-- Museu 1 -->
                       <div class="restaurante">
-                        <img src="assets/restaurante.png" class="img-locais-detalhes">
-                        <h4 class="titulo-detalhes-local">Praça da matriz</h4>
-                        <a href="pgmolde.html" class="botao-detalhes">Detalhes</a>
+                        <img src="../MossoroAcessivel/museus/memorial-da-resistencia.png" class="img-locais-detalhes">
+                        <h4 class="titulo-detalhes-local">Memorial da Resist.</h4>
+                        <a href="../MossoroAcessivel/museus/museus1.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating1-5" name="rating1" hidden>
                           <label for="rating1-5" class="fa-solid fa-star"></label>
