--- a/museus.html
+++ b/museus.html
@@ -93,9 +93,9 @@
                   
                       <!-- Restaurante 3 -->
                       <div class="restaurante">
-                        <img src="assets/restaurante.png" class="img-locais-detalhes">
-                        <h4 class="titulo-detalhes-local">Praça da matriz</h4>
-                        <a href="pgmolde.html" class="botao-detalhes">Detalhes</a>
+                        <img src="./museus/sertao.webp" class="img-locais-detalhes">
+                        <h4 class="titulo-detalhes-local">Museu do Sertão</h4>
+                        <a href="./museus/museu3.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating3-5" name="rating3" hidden>
                           <label for="rating3-5" class="fa-solid fa-star"></label>
