sobre_nos css e título Deusa Gourmet

--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="sobrenos-style.css">
 </head>
 <body>
     <h1>
@@ -15,6 +16,7 @@
     <p> Daniel Tainan </p>
     <p> Alam vinicius </p>
     <p> Victor Manoel </p>
-    <p> RIan Lima dos Santos</p></p>
+    <p> RIan Lima dos Santos</p>
+    <p> Instrutores: Maria Paula e Keginaldo </p>
 </body>
 </html>
