--- a/Restaurantes.html
+++ b/Restaurantes.html
@@ -178,7 +178,7 @@
                     <div class="restaurante">
                       <img src="assets/deusagourmet.jpg" class="img-locais-detalhes">
                       <h4 class="titulo-detalhes-local">Deusa Gourmet</h4>
-                      <a href="pgmolde6.html" class="botao-detalhes">Detalhes</a>
+                      <a href="./restaurantes/pgmolde6.html" class="botao-detalhes">Detalhes</a>
                   
                       <div class="rating-box">
                         <input type="radio" id="rating6-5" name="rating6" hidden>
