--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="locais.html">Locais</a>
                 <a href="mapa_interativo.html">Mapa Interativo</a>
                 <a href="leis.html">Leis de Acessibilidade</a>
-                <a href="sobre_nos.html">Sobre Nós</a>
+                <a href="./sobrenos/sobre_nos.html">Sobre Nós</a>
                 <a href="para_voce.html">Para Você</a>
             </menu>
         </div>
