--- a/sobrenos/sobre_nos.html
+++ b/sobrenos/sobre_nos.html
@@ -17,6 +17,6 @@
     <p> Alam vinicius </p>
     <p> Victor Manoel </p>
     <p> Rian Lima dos Santos</p>
-    <p> Instruores: Maria Paula e Kergironaldo Pires</p>
+    <p> Instrutores: Maria Paula e Kergironaldo Pires</p>
 </body>
 </html>
