links equipe/instrutores sobre nós

--- a/sobrenos/sobre_nos.html
+++ b/sobrenos/sobre_nos.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sobre Nós</title>
     <link rel="stylesheet" href="sobrenos-style.css">
 </head>
 <body>
     <h1>
-        Sobre Nós
+        Equipe
     </h1>
-    <p> Equipe </p>
-    <p> Syang Aires </p>
-    <p> Crisleyciano Samuel</p>
-    <p> Daniel Tainan </p>
-    <p> Alam vinicius </p>
-    <p> Victor Manoel </p>
-    <p> Rian Lima dos Santos</p>
-    <p> Instrutores: Maria Paula e Kergironaldo Pires</p>
+    
+<section class="equipe">
+  <a href="https://github.com/alamvinicius" target="_blank" class="membro">Alam Vinicius</a>
+  <a href="https://github.com/crisleyciano" target="_blank" class="membro">Crisleyciano Samuel</a>
+  <a href="https://github.com/danieltainan" target="_blank" class="membro">Daniel Tainan</a>
+  <a href="https://github.com/alamvinicius" target="_blank" class="membro">Rian Lima dos Santos</a>
+  <a href="https://github.com/syangaires1" target="_blank" class="membro">Syang Aires</a>
+  <a href="https://github.com/rianlimadossantos" target="_blank" class="membro">Victor Manoel</a>
+</section>
+<section class="Instrutores">
+    <h3> Instrutores</h3>
+    <a href="https://github.com/mpmariapaula" target="_blank" class="membro">Maria Paula</a>
+    <a href="https://github.com/Kergionaldo" target="_blank" class="membro">Kergionaldo</a>
+</section>
 </body>
 </html>
