--- a/pracas/praca1.html
+++ b/pracas/praca1.html
@@ -3,14 +3,14 @@
     <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Mossoro Acessivel - Memorial da Resistência</title>
+      <title>Mossoro Acessivel - Praca do Rotary</title>
       <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="../pracas/moldepracas-style.css">
     </head>
     <body>
       <div class="container">
-        <h2 class="titulo"> Praça da Convivência </h2>
-        <img src="./convivencia.jpg" alt="fachada da Praça da Convivência" class="imagem-local">
+        <h2 class="titulo"> Praça do Rotary </h2>
+        <img src="praca-rotary.png" alt="fachada da Praça da Convivência" class="imagem-local">
         
         <div class="tags">
           <span class="tag">Rampas de Acesso</span>
@@ -19,7 +19,7 @@
         </div>
     
         <p class="descricao">
-            A praça da convivência é um espaço público projetado para promover a interação social e o bem-estar da comunidade. Esses espaços são acolhedores e acessíveis para pessoas de todas as idades, oferecendo atividades recreativas, culturais e recreativas. 
+            Rua Antônio Vieira de Sá, 476 - Nova Betânia, Mossoró - RN, 59612-100
         </p>
       </div>
     </body>
