--- a/lojas.html
+++ b/lojas.html
@@ -148,11 +148,11 @@
                       </div>
                     </div>
                   
-                    <!-- Restaurante 5 -->
+                    <!-- Loja 5 -->
                     <div class="restaurante">
-                      <img src="assets/restaurante.png" class="img-locais-detalhes">
+                      <img src="../MossoroAcessivel/lojas/americanas.png" class="img-locais-detalhes">
                       <h4 class="titulo-detalhes-local">Praça da matriz</h4>
-                      <a href="pgmolde5.html" class="botao-detalhes">Detalhes</a>
+                      <a href="../MossoroAcessivel/lojas/loja5.html" class="botao-detalhes">Detalhes</a>
                   
                       <div class="rating-box">
                         <input type="radio" id="rating5-5" name="rating5" hidden>
