--- a/lojas/loja5.html
+++ b/lojas/loja5.html
@@ -20,7 +20,7 @@
     </div>
 
     <p class="descricao">
-      Americanas, loja dentro do Shopping, tendo váriados produtos e com acessibilidade presente. Avenida João da Escóssia, 1515, Nova Betânia, dentro do Partage Shopping Mossoró.
+     loja Americanas, loja dentro do Shopping, tendo váriados produtos e com acessibilidade presente. Avenida João da Escóssia, 1515, Nova Betânia, dentro do Partage Shopping Mossoró.
     </p>
   </div>
 </body>
