--- a/lojas.html
+++ b/lojas.html
@@ -151,7 +151,7 @@
                     <!-- Loja 5 -->
                     <div class="restaurante">
                       <img src="../MossoroAcessivel/lojas/americanas.png" class="img-locais-detalhes">
-                      <h4 class="titulo-detalhes-local">Praça da matriz</h4>
+                      <h4 class="titulo-detalhes-local">Americanas</h4>
                       <a href="../MossoroAcessivel/lojas/loja5.html" class="botao-detalhes">Detalhes</a>
                   
                       <div class="rating-box">
