--- a/museus.html
+++ b/museus.html
@@ -151,7 +151,7 @@
                     <!-- Museu 5 -->
                     <div class="restaurante">
                       <img src="../MossoroAcessivel/museus/estacaomossoro.webp" class="img-locais-detalhes">
-                      <h4 class="titulo-detalhes-local">Praça da matriz</h4>
+                      <h4 class="titulo-detalhes-local">Estação das Artes Elizeu Ventania</h4>
                       <a href="../MossoroAcessivel/museus/museu5.html" class="botao-detalhes">Detalhes</a>
                   
                       <div class="rating-box">
