--- a/para_voce.html
+++ b/para_voce.html
@@ -9,5 +9,12 @@
     <H1>
         Para Você
     </H1>
+    <p>
+        Este espaço foi criado para você que busca mais autonomia, informação e inclusão. Aqui reunimos dicas, ferramentas e histórias que podem ajudar no seu dia a dia.
+
+    </p>
+        
+
+        
 </body>
 </html>
