--- a/supermercados/super6.html
+++ b/supermercados/super6.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <h2 class="titulo">Assai</h2>
-    <img src="assets/assai.png" alt="Fachada do supermercado Rebouças na Av. Alberto Maranhão" class="imagem-local">
+    <img src="../assets/assai.png" alt="Fachada do supermercado Rebouças na Av. Alberto Maranhão" class="imagem-local">
     
     <div class="tags">
       <span class="tag">Rampas de Acesso</span>
