--- a/Restaurantes.html
+++ b/Restaurantes.html
@@ -68,8 +68,8 @@
                   
                       <!-- Restaurante 2 -->
                       <div class="restaurante">
-                        <img src="assets/images.png" class="img-locais-detalhes">
-                        <h4 class="titulo-detalhes-local">Praça da matriz</h4>
+                        <img src="assent/images.png" class="img-locais-detalhes">
+                        <h4 class="titulo-detalhes-local">germanos restaurante</h4>
                         <a href="pgmolde2.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating2-5" name="rating2" hidden>
