--- a/lojas.html
+++ b/lojas.html
@@ -70,7 +70,7 @@
                       <div class="restaurante">
                         <img src="assets/restaurante.png" class="img-locais-detalhes">
                         <h4 class="titulo-detalhes-local">Praça da matriz</h4>
-                        <a href="pgmolde.html" class="botao-detalhes">Detalhes</a>
+                        <a href="lojas/loja2.html" class="botao-detalhes">Detalhes</a>
                         <div class="rating-box">
                           <input type="radio" id="rating2-5" name="rating2" hidden>
                           <label for="rating2-5" class="fa-solid fa-star"></label>
