--- a/lojas/loja4.html
+++ b/lojas/loja4.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Magazine Luiza</title>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../molderest-style.css">
+  <link rel="stylesheet" href="moldelojas-style.css">
 </head>
 <body>
   <div class="container">
