--- a/Restaurantes.html
+++ b/Restaurantes.html
@@ -124,7 +124,7 @@
 
                     <!-- Restaurante 4 -->
                     <div class="restaurante">
-                      <img src="assets/logo-onsen-branco.jpg.jpg" class="img-locais-detalhes">
+                      <img src="/..assets/logo-onsen-branco.jpg.jpg" class="img-locais-detalhes">
                       <h4 class="titulo-detalhes-local">Restaurante Onsen</h4>
                       <a href="pgmolde4.html" class="botao-detalhes">Detalhes</a>
                   
