--- a/leis.html
+++ b/leis.html
@@ -33,25 +33,84 @@
         </div>
     </div>
 
-    <div>
-        <h1>
-            Leis
-        </h1>
+    <style>
+    /* Estilos para o container principal */
+    .container-leis {
+        max-width: 600px; /* Limita a largura para melhor leitura */
+        margin: 20px auto; /* Centraliza o div na página */
+        padding: 20px 30px; /* Espaçamento interno */
+        border: 1px solid #ddd; /* Borda sutil */
+        border-radius: 8px; /* Cantos arredondados */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra suave para profundidade */
+        background-color: #f9f9f9; /* Fundo levemente cinza */
+        font-family: Arial, sans-serif; /* Fonte legível */
+    }
+
+    /* Estilos para o título */
+    .container-leis h1 {
+        text-align: center; /* Centraliza o título */
+        color: #0056b3; /* Cor azul forte para destaque */
+        border-bottom: 2px solid #0056b3; /* Linha de separação */
+        padding-bottom: 10px; /* Espaçamento abaixo da linha */
+        margin-bottom: 20px; /* Espaçamento inferior */
+        font-size: 1.8em; /* Tamanho do título */
+    }
+
+    /* Estilos para a lista não ordenada */
+    .container-leis ul {
+        list-style: none; /* Remove os marcadores de lista padrão */
+        padding: 0; /* Remove o padding padrão da lista */
+    }
+
+    /* Estilos para cada item da lista */
+    .container-leis li {
+        margin-bottom: 15px; /* Espaço entre os itens */
+        padding: 10px; /* Espaçamento interno para o item */
+        border-left: 5px solid #007bff; /* Borda esquerda colorida como destaque */
+        background-color: #ffffff; /* Fundo branco para cada item */
+        border-radius: 4px; /* Cantos arredondados nos itens */
+        transition: background-color 0.3s ease; /* Transição suave para o hover */
+    }
+
+    /* Efeito ao passar o mouse sobre o item da lista */
+    .container-leis li:hover {
+        background-color: #eaf6ff; /* Fundo azul claro ao passar o mouse */
+    }
+
+    /* Estilos para o link */
+    .container-leis a {
+        text-decoration: none; /* Remove o sublinhado padrão do link */
+        color: #333; /* Cor do texto do link */
+        font-weight: bold; /* Deixa o título da lei em negrito */
+        display: block; /* Ocupa todo o espaço do li */
+    }
+
+    /* Efeito ao passar o mouse sobre o link */
+    .container-leis a:hover {
+        color: #0056b3; /* Cor azul escuro no hover */
+    }
+</style>
+
+<div class="container-leis">
+    <h1>
+        Leis
+    </h1>
 
         <ul>
-         <li>
-            <a href="https://www.planalto.gov.br/ccivil_03/_ato2015-2018/2015/lei/l13146.htm" target="_blank" rel="noopener noreferrer">Lei Nº 13.146, de 6 de Julho de 2015</a> - Institui a Lei Brasileira de Inclusão da Pessoa com Deficiência (Estatuto da Pessoa com Deficiência);
+            <li>
+                <a href="https://www.planalto.gov.br/ccivil_03/_ato2015-2018/2015/lei/l13146.htm" target="_blank" rel="noopener noreferrer">Lei Nº 13.146, de 6 de Julho de 2015</a> - Institui a Lei Brasileira de Inclusão da Pessoa com Deficiência (Estatuto da Pessoa com Deficiência);
+             </li>
+             <li>
+             <a href="https://www.planalto.gov.br/ccivil_03/_ato2011-2014/2011/lei/l12527.htm" target="_blank" rel="noopener noreferrer">Lei Nº 12.527, de 18 de Novembro de 2011</a> - Lei de Acesso à Informação (Art. 8º (...)§ 3º, VIII);
          </li>
-         <li>
-            <a href="https://www.planalto.gov.br/ccivil_03/_ato2011-2014/2011/lei/l12527.htm" target="_blank" rel="noopener noreferrer">Lei Nº 12.527, de 18 de Novembro de 2011</a> - Lei de Acesso à Informação (Art. 8º (...)§ 3º, VIII);
+            <li>
+                <a href="https://www.planalto.gov.br/ccivil_03/leis/2002/L10436.htm" target="_blank" rel="noopener noreferrer">Lei Nº 10.436, de 24 de abril de 2002</a> - Dispõe sobre a Língua Brasileira de Sinais - Libras e dá outras providências;
          </li>
-         <li>
-            <a href="https://www.planalto.gov.br/ccivil_03/leis/2002/L10436.htm" target="_blank" rel="noopener noreferrer">Lei Nº 10.436, de 24 de abril de 2002</a> - Dispõe sobre a Língua Brasileira de Sinais - Libras e dá outras providências;
-         </li>
-         <li>
+            <li>
             <a href="https://www.planalto.gov.br/ccivil_03/leis/l10098.htm" target="_blank" rel="noopener noreferrer">Lei Nº 10.098, de 19 de dezembro de 2000</a> - Estabelece normas gerais e critérios básicos para a promoção da acessibilidade das pessoas portadoras de deficiência ou com mobilidade reduzida, e dá outras providências.
-         </li> 
+            </li> 
         </ul>
     </div>
+    
 </body>
 </html>
