--- a/restaurantes/pgmolde2.html
+++ b/restaurantes/pgmolde2.html
@@ -10,7 +10,7 @@
     <body>
       <div class="container">
         <h2 class="titulo">germanos restaurante</h2>
-        <img src="../assets/images.png" alt="Deusa Gourmet" class="imagem-local">
+        <img src="../assets/germanos.png" alt="Deusa Gourmet" class="imagem-local">
         
         <div class="tags">
           <span class="tag">Rampas de Acesso</span>
